--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 :root {
     --font-family: 'Motoserrat', sans-serif;
-    --bg-color: #27005D;
-    --primary-color: #9400FF;
+    --bg-color: #00f7ff;
+    --primary-color: #004d85;
     --cor-segundaria: #E4F1FF;
     --detalhes: #E4F1FF;
 }
